@@ -1,3 +1,5 @@
+* Allow to store Dict as JSON on the database
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 * Sanitize path in file_open against suffix (CVE-2017-0360)
